--- a/css/components/buttons/buttons.css
+++ b/css/components/buttons/buttons.css
@@ -35,3 +35,13 @@
   background-color: var(--primary);
   color: var(--black);
 }
+
+
+.btn-icon {
+  inline-size: 1.5rem;
+  block-size: 1.5rem;
+  background: transparent;
+  color: var(--primary);
+  border: none;
+  font: var(--button);
+}
