--- a/css/components/header/items.css
+++ b/css/components/header/items.css
@@ -1,5 +1,5 @@
 .items {
-  display: flex;
+  display: none;
   flex-direction: row;
   color: var(--white);
   gap: 3rem;
@@ -16,4 +16,11 @@
 .item a:hover {
   text-decoration: underline;
   color: var(--primary);
+}
+
+
+@media screen and (min-width: 768px) {
+  .items{
+    display: flex;
+  }
 }
