--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -1,5 +1,13 @@
 .wrapper{
   max-inline-size: 1366px;
-  /* border: 1px solid red; */
   margin: auto;
+  padding-inline: 0;
+}
+
+
+@media screen and (max-width: 1366px) {
+  .wrapper{
+    padding-inline: 1rem;
+  }
+
 }
