--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 @import './components/ui/card.css';
 @import './components/header/header.css';
 @import './wrapper.css';
+@import './components/slider/slider.css';
 
 .container{
     border: 1px solid red;
