--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import './components/header/header.css';
 @import './wrapper.css';
 @import './components/slider/slider.css';
+@import './components/movies/movies.css';
 
 .container{
     border: 1px solid red;
