--- a/css/components/slider/slider.css
+++ b/css/components/slider/slider.css
@@ -1,8 +1,10 @@
 @import './bullet.css';
+@import './scroll-buttons.css';
 
 .slider-content {
   /* border: 1px solid red; */
   text-align: center;
+  position: relative;
 }
 
 .slide-container {
@@ -27,4 +29,9 @@
 .slider-slide .image img {
   width: 100%;
   vertical-align: middle;
+}
+
+
+.slide-container::-webkit-scrollbar{
+  display: none;
 }
